--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.6              # added flutter_native_splash for splash screen
   firebase_core: ^3.13.0
   provider: ^6.1.4
   firebase_auth: ^5.5.2
@@ -60,6 +61,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/splash_screen/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -91,3 +96,17 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_native_splash:
+  color: "#c7e9c0"
+  image: "assets/splash_screen/logo_placeholder.png"
+  branding: "assets/splash_screen/branding_placeholder.png"
+  android: true
+  ios: true
+  web: false
+
+  android_12:
+    color: "#c7e9c0"
+    image: "assets/splash_screen/logo_placeholder.png"
+    branding: "assets/splash_screen/branding_placeholder.png"
+    
