--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.4
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
