--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
   google_sign_in: ^6.3.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -110,4 +111,9 @@ flutter_native_splash:
     color: "#c7e9c0"
     image: "assets/splash_screen/logo_placeholder.png"
     branding: "assets/splash_screen/branding_placeholder.png"
+
+flutter_icons:
+  android: true
+  ios: trueH
+  image_path: "assets/splash_screen/logo_placeholder.png"
     
