--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_native_splash: ^2.4.6              # added flutter_native_splash for splash screen
+  flutter_native_splash: ^2.4.6
   firebase_core: ^3.13.0
   provider: ^6.1.4
   firebase_auth: ^5.5.2
@@ -42,15 +40,19 @@ dependencies:
   google_sign_in: ^6.3.0
   flutter_launcher_icons: ^0.14.3
   async: ^2.12.0
-  flutter_google_places: ^0.3.0
+
+
   google_maps_flutter: ^2.12.1
   qr_flutter: ^4.1.0
   map_picker: ^0.0.3
   flutter_map: ^4.0.0
   latlong2: ^0.8.2
   geocoding: ^3.0.0
-  google_maps_webservice: ^0.0.20-nullsafety.5
+  google_maps_webservice: ^0.0.18
   geolocator: ^14.0.0
+
+
+
 
 dev_dependencies:
   flutter_test:
