--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   google_maps_webservice: ^0.0.18
   geolocator: ^14.0.0
   multi_select_flutter: ^4.1.3
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.5
 
 
 
