--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
 
     <application
-        android:label="travel_app"
+        android:label="Travel Buddy"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
