--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   mobile_scanner: ^7.0.0
   path_provider: ^2.1.5
+  google_sign_in_web: ^0.12.4+4
 
 
 
