--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,11 +10,20 @@
     <application
         android:label="Travel Buddy"
         android:name="${applicationName}"
+        android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher">
+        
+        <!-- enableOnBackInvokedCallback is to enable the new predictive back gesture navigation system introduced in Android 13 (API 33).
+             This provides a preview of the previous screen when the user starts the back gesture,
+             allowing them to either complete the gesture to go back or cancel it to stay on the current screen. -->
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDEBqD6XjeQ23H-XB0LOkcL73oy931VAYE" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".MainActivity"
