--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   mobile_scanner: ^7.0.0
   path_provider: ^2.1.5
   google_sign_in_web: ^0.12.4+4
+  image_gallery_saver_plus: ^4.0.1
 
 
 
