fix: fixed sign up issue caused by firebasestorage use in pfp

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   cloud_functions: ^5.5.0
   firebase_app_check: ^0.3.2+5
+  shared_preferences: ^2.5.3
 
 
 
