--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   cloud_functions: ^5.5.0
   firebase_app_check: ^0.3.2+5
   shared_preferences: ^2.5.3
+  google_mlkit_barcode_scanning: ^0.14.1
   # scan: ^1.6.0
 
 
