--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   path_provider: ^2.1.5
   google_sign_in_web: ^0.12.4+4
   image_gallery_saver_plus: ^4.0.1
+  linear_progress_bar: "^1.2.0"
   firebase_messaging: ^15.2.5
   flutter_local_notifications: ^18.0.1
   cloud_functions: ^5.5.0
@@ -65,6 +66,7 @@ dependencies:
   shared_preferences: ^2.5.3
   google_mlkit_barcode_scanning: ^0.14.1
   # scan: ^1.6.0
+  password_strength: ^0.2.0
 
 
 
