update 2 electric boogaloo

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@
 *.swp
 .DS_Store
 .atom/
-.build/
-!.build/web/
 .buildlog/
 .history
 .svn/
@@ -28,7 +26,7 @@ migrate_working_dir/
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
-.flutter-plugins
+.flutter-pluginsgit
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
